remove custom stock script as yahoo finance API has shut down

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -34,9 +34,9 @@ markup=none
 #label=
 #interval=3600
 
-[stocks]
-label=
-interval=3600
+#[stocks]
+#label=
+#interval=3600
 
 [timehome]
 label=
