--- a/.config/i3/config
+++ b/.config/i3/config
@@ -102,7 +102,7 @@ set $workspace1 "1 "
 set $workspace2 "2 "
 set $workspace3 "3  "
 set $workspace4 "4 "
-set $workspace5 "5"
+set $workspace5 "5 "
 set $workspace6 "6"
 set $workspace7 "7"
 set $workspace8 "8"
@@ -112,6 +112,7 @@ set $workspace10 "10"
 assign [class="Google-chrome"] $workspace1
 assign [window_role="popup"] $workspace1
 assign [class="Thunderbird"] $workspace2
+assign [class="Spotify"] $workspace5
 
 workspace $workspace1 output DP2-3
 workspace $workspace2 output DP2-3
@@ -221,6 +222,11 @@ bindsym $mod+Shift+x exec '/usr/local/bin/lock'
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
