--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -38,10 +38,10 @@ markup=none
 #label=
 #interval=3600
 
-[timehome]
-label=
-command=cat /tmp/timehome.time
-interval=10
+#[timehome]
+#label=
+#command=cat /tmp/timehome.time
+#interval=10
 
 #[clickme]
 #full_text=Click me!
@@ -52,13 +52,13 @@ interval=10
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-#[volume]
-#label=VOL
-#label=♪
-#instance=Master
-#instance=PCM
-#interval=once
-#signal=10
+[volume]
+label=VOL
+label=♪
+instance=Master
+instance=PCM
+interval=once
+signal=10
 
 # Memory usage
 #
