--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,9 +11,11 @@
 
 set $mod Mod4
 
+# Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:monospace 8
 font pango:System San Francisco Display 8
+#font pango:Liberation Sans 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -33,12 +35,15 @@ floating_modifier $mod
 bindsym $mod+Return exec i3-sensible-terminal
 
 # kill focused window
-bindsym $mod+Shift+a kill
+bindsym $mod+Shift+A kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -width 100 -padding 100 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "System San Francisco Display 18"
+#bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -width 100 -padding 100 -opacity "85" -bw 0 -color-window "$bg-color,$bg-color,$bg-color" -color-normal "$bg-color,$bg-color,$bg-color,$bg-color,#9575cd" -font "System San Francisco Display 18"
+bindsym $mod+d exec --no-startup-id "rofi -show run -lines 3 -eh 2 -width 50 -padding 100 -bw 0 -color-window '#2f343f,#2f343f,#2f343f' -color-normal '#2f343f,#f3f4f5,#2f343f,#2f343f,#9575cd' -font 'System San Francisco Display 18'"
+bindsym $mod+s exec --no-startup-id "rofi -show ssh -lines 3 -eh 2 -width 50 -padding 100 -bw 0 -color-window '#2f343f,#2f343f,#2f343f' -color-normal '#2f343f,#f3f4f5,#2f343f,#2f343f,#9575cd' -font 'System San Francisco Display 18'"
 
-bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -width 100 -padding 100 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "System San Francisco Display 18"
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -61,7 +66,7 @@ bindsym $mod+Right focus right
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
-bindsym $mod+Shift+m move right
+bindsym $mod+Shift+M move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -79,8 +84,8 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
+#bindsym $mod+s layout stacking
+bindsym $mod+z layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
@@ -96,9 +101,7 @@ bindsym $mod+q focus parent
 #bindsym $mod+d focus child
 
 #exec --no-startup-id '~/.screenlayout/screenLayout_new.sh'
-#exec_always xrandr --output VIRTUAL1 --off --output eDP1 --off --output DP1 --off --output DP2-1 --off --output DP2-2 --mode 1920x1080 --pos 1920x0 --rotate normal --output DP2-3 --mode 1920x1080 --pos 0x0 --rotate normal --output HDMI2 --off --output HDMI1 --off --output DP2 --off
-
-exec_always "xrandr --output DP2-2 --right-of DP2-3 --auto --output eDP1 --off"
+#exec_always "xrandr --output DP2-2 --right-of DP2-3 --auto --output eDP1 --off"
 
 set $workspace1 "1 "
 set $workspace2 "2 "
@@ -116,10 +119,10 @@ assign [window_role="popup"] $workspace1
 assign [class="Thunderbird"] $workspace2
 assign [class="Spotify"] $workspace5
 
-workspace $workspace1 output DP2-3
-workspace $workspace2 output DP2-3
-workspace $workspace3 output DP2-3
-workspace $workspace4 output DP2-2
+workspace $workspace1 output HDMI-2
+#workspace $workspace2 output DP2-3
+#workspace $workspace3 output DP2-3
+workspace $workspace4 output HDMI-2
 
 # switch to workspace
 bindsym $mod+ampersand workspace $workspace1
@@ -156,43 +159,36 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
+bindsym $mod+r mode "resize"
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+# These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym m resize grow width 10 px or 10 ppt
+# Pressing left will shrink the window’s width.
+# Pressing right will grow the window’s width.
+# Pressing up will shrink the window’s height.
+# Pressing down will grow the window’s height.
+		bindsym Right resize shrink width 10 px or 10 ppt
+		bindsym Up resize grow height 10 px or 10 ppt
+		bindsym Down resize shrink height 10 px or 10 ppt
+		bindsym Left resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Right resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Left resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
+# back to normal: Enter or Escape
+		bindsym Return mode "default"
+		bindsym Escape mode "default"
 }
 
-bindsym $mod+r mode "resize"
-
-set $bg-color							#2f343f
-set $inactive-bg-color		#2f343f
-set $text-color						#f3f4f5
-set $inactive-text-color	#676e7d
-set $urgent-bg-color			#e53935
+set $bg-color            #2f343f
+set $inactive-bg-color   #2f343f
+set $text-color          #f3f4f5
+set $inactive-text-color #676e7d
+set $urgent-bg-color     #e53935
 
 # Font for window titles. Will also be used by the bar unless a different font
 # Widow Colours
 #                       border			background		text			indicator
 client.focused          $bg-color		$bg-color		$text-color		#00f00
 client.focused_inactive $inactive-bg-color	$inactive-bg-color	$inactive-text-color	#00f00
-client.unfocused       	$inactive-bg-color      $inactive-bg-color      $inactive-text-color    #00f00 
+client.unfocused       	$inactive-bg-color      $inactive-bg-color      $inactive-text-color    #00f00
 client.urgent           $urgent-bg-color	$urgent-bg-color	$text-color		#00f00
 
 hide_edge_borders both
@@ -203,54 +199,96 @@ new_window 1pixel
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	#status_command i3status -c /home/florian/.config/i3/i3status.conf
-	status_command i3blocks -c /home/florian/.config/i3/i3blocks.conf
-	tray_output DP2-3
-	font pango:System San Francisco Display 8
-	separator_symbol " "
-	colors {
-		background	$bg-color
-		separator	#757575
-		#										border							background					text
-		focused_workspace		$bg-color						$bg-color						$text-color
-		inactive_workspace	$inactive-bg-color	$inactive-bg-color	$inactive-text-color
-		urgent_workspace		$urgent-bg-color		$urgent-bg-color		$text-color
-	}
-}	
+    status_command i3blocks -c /home/florian/.config/i3/i3blocks.conf
+    #tray_output DP2-3
+		font pango:System San Francisco Display 8
+		separator_symbol " "
+		colors {
+			background	$bg-color
+				separator	#757575
+        #                   border			       background         text
+				focused_workspace 	$bg-color          $bg-color          $text-color
+				inactive_workspace	$inactive-bg-color $inactive-bg-color $inactive-text-color
+				urgent_workspace		$urgent-bg-color   $urgent-bg-color   $text-color
+		}
+}
 
-bindsym $mod+Shift+x exec '/usr/local/bin/lock'
+# Applets
+exec --no-startup-id nm-applet
+exec --no-startup-id "/usr/bin/blueman-applet"
 
-# Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+# Background settings
+exec --no-startup-id feh --bg-scale /home/florian/Images/wallpaper.jpg
+#exec --no-startup-id compton -f -D 5 -b --vsync opengl
+#exec --no-startup-id compton -f -D 5 -b
+exec --no-startup-id compton -b
 
-# Media player controls
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
-
-# Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
-
-# Using feh to change background
-exec_always feh --bg-scale  --no-xinerama /home/florian/images/wallpaper.jpg
-# Compton enable i3 transparence
-exec --no-startup-id compton -f -D 2 -cCGb --backend glx --vsync opengl
-# Autolocking screen and screensaver
-exec xautolock -time 3 -corners +0-0 -locker '/usr/local/bin/lock'
+# Autolocking screen and screensaver
+bindsym $mod+Shift+x exec "/usr/local/bin/lock --now"
+exec xautolock -time 20 -locker '/usr/local/bin/lock --now'
 exec xset dpms 300
-# Managing shutdown
+
+# Shutdown management
 bindsym $mod+Delete exec '/usr/local/bin/i3exit'
-for_window [class="I3-exit"] floating enable border normal
 
 # Enable floating mode for pop-up windows
 for_window [window_role="pop-up"] floating enable border normal
-
-exec  google-chrome
-exec  thunderbird 
+for_window [class="I3-exit"] floating enable border normal
+for_window [class="Arandr"] floating enable border normal
+for_window [class="Arandr"] resize set 800 500
+for_window [class="Pavucontrol"] floating enable border normal
+for_window [class="Gnome-calculator"] floating enable border normal
 
 # Keepass autocomplete
 bindsym Ctrl+Shift+a exec "/usr/bin/keepass2 --auto-type"
 
+## Volume control
+
+# Path to volume control, without trailing slash
+set $volumepath /usr/local/bin/i3-volume
+
+# Command for the status line
+#   ie: i3blocks, i3status
+set $statuscmd i3blocks
+
+# Signal used to update the status line
+#   i3blocks uses SIGRTMIN+10 by default
+#   i3status uses SIGUSR1 by default
+set $statussig SIGUSR1
+
+# Amount to increase/decrease volume as a percentage
+set $volumestep 5
+
+# alsa-utils settings
+#
+# To configure a default card, see https://www.alsa-project.org/main/index.php/Asoundrc
+#
+# Card number to control.
+#   If not specified, i3-volume will let `amixer` use a default.
+#   List cards: aplay -l
+#set $alsacard 1
+
+# append "-c $alsacard" without quotes to override default card
+bindsym XF86AudioRaiseVolume exec $volumepath -anp -i $volumestep -t $statuscmd -u $statussig
+bindsym XF86AudioLowerVolume exec $volumepath -anp -d $volumestep -t $statuscmd -u $statussig
+bindsym XF86AudioMute        exec $volumepath -amn -t $statuscmd -u $statussig
+
+## Microphone control
+bindsym XF86AudioMicMute exec amixer set Capture toggle
+
+## Brightness control
+bindsym XF86MonBrightnessUp   exec xbacklight -inc 10
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10
+
+## Screen control
+bindsym XF86Display exec "/usr/local/bin/screen.sh solo"
+bindsym Shift+XF86Display exec "/usr/local/bin/screen.sh multi"
+
+## Screenshot
+bindsym Print exec "gnome-screenshot -i"
+
+## Wifi control
+#XF86WLAN exec "nmcli radio wifi on"
+
+## Bluetooth control
+bindsym XF86Bluetooth exec "/usr/local/bin/systemd-toggle bluetooth"
