--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,14 +1,67 @@
 [global_config]
-  enabled_plugins = InactivityWatch, ActivityWatch, LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
-  inactive_color_offset = 1.0
-  suppress_multiple_term_dialog = True
-  title_inactive_bg_color = "#2f343f"
-  title_inactive_fg_color = "#676e7d"
-  title_receive_bg_color = "#1fa67a"
-  title_transmit_bg_color = "#2f343f"
   title_transmit_fg_color = "#c0bebf"
+  title_transmit_bg_color = "#2f343f"
+  title_receive_bg_color = "#1fa67a"
+  title_inactive_fg_color = "#676e7d"
+  title_inactive_bg_color = "#2f343f"
+  inactive_color_offset = 1.0
+  enabled_plugins = InactivityWatch, ActivityWatch, LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
+  suppress_multiple_term_dialog = True
+  title_use_system_font = False
+  title_font = JetBrains Mono Medium 8
 [keybindings]
   help = F9
+[profiles]
+  [[default]]
+    urgent_bell = True
+    background_color = "#002b36"
+    background_darkness = 0.95
+    background_type = transparent
+    cursor_color = "#839496"
+    font = Noto Mono 11
+    foreground_color = "#839496"
+    scrollback_infinite = True
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#073642:#cb4b16:#859900:#b58900:#268bd2:#6c71c4:#93a1a1:#fdf6e3"
+    word_chars = "-,./?%&#:_~"
+    login_shell = True
+    use_system_font = False
+  [[presentation]]
+    urgent_bell = True
+    background_color = "#002b36"
+    background_darkness = 0.95
+    background_type = transparent
+    cursor_color = "#839496"
+    font = Noto Mono 16
+    foreground_color = "#839496"
+    scrollback_infinite = True
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#073642:#cb4b16:#859900:#b58900:#268bd2:#6c71c4:#93a1a1:#fdf6e3"
+    word_chars = "-,./?%&#:_~"
+    login_shell = True
+    use_system_font = False
+  [[solariezd-dark]]
+    urgent_bell = True
+    background_color = "#002b36"
+    background_darkness = 0.95
+    background_type = transparent
+    cursor_color = "#839496"
+    font = Noto Mono 11
+    foreground_color = "#839496"
+    scrollback_infinite = True
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#073642:#cb4b16:#859900:#b58900:#268bd2:#6c71c4:#93a1a1:#fdf6e3"
+    word_chars = "-,./?%&#:_~"
+    login_shell = True
+    use_system_font = False
+  [[solarized-light]]
+    urgent_bell = True
+    background_color = "#eee8d5"
+    cursor_color = "#002b36"
+    font = Noto Mono 11
+    foreground_color = "#002b36"
+    scrollback_infinite = True
+    palette = "#073642:#d30102:#859900:#b58900:#6c71c4:#d33682:#2aa198:#839496:#586e75:#cb4b16:#859900:#b58900:#268bd2:#d33682:#2aa198:#93a1a1"
+    word_chars = "-,./?%&#:_~"
+    login_shell = True
+    use_system_font = False
 [layouts]
   [[default]]
     [[[child1]]]
@@ -18,16 +71,3 @@
       parent = ""
       type = Window
 [plugins]
-[profiles]
-  [[default]]
-    background_color = "#002b36"
-    background_darkness = 0.81
-    background_image = /home/florian/images/wallpaper.jpg
-    background_type = transparent
-    font = Monospace 9
-    foreground_color = "#839496"
-    login_shell = True
-    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#073642:#cb4b16:#859900:#b58900:#268bd2:#6c71c4:#93a1a1:#fdf6e3"
-    scrollback_infinite = True
-    urgent_bell = True
-    use_system_font = False
